# vite-fastapi-sqlite-commons

./: AGENTS.md  CLAUDE.md  README.md  docker-compose.base.yml  pyproject.toml
backend/: Dockerfile  audio_runtime.py  cors.py  database.py  desktop_agent_jobs.py  desktop_events.py  desktop_task_jobs.py  forger_desktop.py  mcp_runtime.py  realtime.py  remote_tunnel.py
backend/testing/: __init__.py  apps.py  database.py  desktop.py  mcp.py
backend/tests/: test_audio_runtime.py  test_background_jobs.py  test_database_health_cors.py  test_desktop_agent_jobs.py  test_desktop_events.py  test_desktop_task_jobs.py  test_forger_context.py  test_forger_desktop.py  test_mcp_runtime.py  test_realtime.py  test_remote_tunnel.py
frontend/: Dockerfile  client.ts  dateTimeSelectors.tsx  forgerBrand.ts  index.ts  package.json  realtime.ts  remoteTunnel.ts  tsconfig.json  vitest.config.ts
frontend/testing/: fetchMock.ts
frontend/tests/: client.test.ts  dateTimeSelectors.test.tsx  locale.test.ts  query.test.ts  realtime.test.ts  remoteTunnel.test.ts
scripts/: verify-backend.py
