[project]
name = "forger-vite-fastapi-sqlite-commons"
version = "0.1.0"
description = "Shared backend and frontend commons for Forger vite-fastapi-sqlite apps."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "sqlmodel>=0.0.22",
  "websockets>=14.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=backend",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
  "backend/tests/*",
  "backend/testing/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "pragma: no cover",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = [
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["B017"]
